
5.1.0 -> 5.2a0:
    - jbj: keyutils: permit configurable keyring.
    - rse: fix building under --with-lzma by providing the necessary 64-bit defines for inclusion of <lzma.h>
    - jbj: QNX: use strtouq() instead of strtoul() in rpmmtree.
    - jbj: QNX: retrofit asprintf.h (from XAR) for the deprived. rpmmtree uses
	(rewrite to eliminate asprintf is an alternative).
    - jbj: QNX: supply missing typedef's for uint32_t.
    - jbj: add alternative %{sparcx} macro shorthand (bz #455972).
    - jbj: rpmio: add new link/unlink methods to loader map.
    - jbj: python: add rpm.Keyring/rpm.Pubkey subtype methods for rpmkeyring.
    - jbj: python: convert rpmtd-py to rpm style includes.
    - jbj: filetriggers: rewite w splint annotations. much more todo++ here.
    - jbj: keyring: (re-)port keyring.[ch] w refcounts.
    - rpm.org: (re-)steal rpmkeyring.[ch] with added refcounts.
    - jbj: python: add rpm.td subtype methods for rpmtd.
    - jbj: rpmtd: expose symbols needed by python rpm.td.
    - jbj: rpmtd: rework rpmtdFormats lookup. more todo++.
    - jbj: rpmtd: initial port.
    - rpm.org: steal rpmtd.[ch] modules for porting.
    - rpm.org: steal rpmkeyring/rpmtd modules for porting work.
    - jbj: fix: use the uint64_t callback args, not the legacy compat copies.
    - rpm.org: Adjust for rpmps interface change.
    - rpm.org: Adjust callback for amount+total type change.
    - rse: upgrade "devtool" build environment to GNU shtool 2.0.8
    - bero: Fix hang when using rpmdsSingle and rpm4compat.h from C++
    - proyvind: clean out all build warnings for perl & python bindings.
    - jbj: gzdio: quadruple check with external -lz. still no fix => disabled.
    - jbj: gzdio: integrate the cpio tracking patch (needs to be done elsewhere)
    - jbj: gzdio: disable rsync flushing until a fix can be attempted.
    - jbj: gzdio: remove c99'ism.
    - proyvind: disable filetriggers for src.rpms.